# prod-cli

./: .gitattributes  .gitignore  .gitleaks.toml  .goreleaser.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  env.example  plugins.json
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  homebrew-formula.rb.template
cli/: .dockerignore  .gitignore  Dockerfile.build  Makefile  go.mod  go.sum
docs/: DISTRIBUTION.md  agent-deploy.md  agent-native-plan.md  agentic-deploy-plan.md  agentic-ownership-roadmap.md  aws-app-runner.md  cloud-framework-plan.md  cloudflare-pages-protocol.md  clouds.md  deployment-logger-integration.md  deployment-logging.md  design.md  distribution.md  dx-roadmap.md  f6-smoke-harness-plan.md  f8-2d-daytona-plan.md  fast-follows.md  github-actions-testing.md  l3-plugin-plan.md  launch-roadmap.md  phase-0-gate.md  plugins.md  policy.example.yaml  pr-previews.md  protocol.md  security-sweep.md  ui-modernization-plan.md  v1-backend-cleanup-plan.md  v1-orphan-hygiene-plan.md  v1-plans-README.md  v1-reversibility-plan.md  windows.md
infra/: README.md  cloudformation-deploy-role-template.yaml  cloudformation-github-oidc-template.yaml  cloudformation-iam-template.yaml  s3-cloudformation-bucket.yaml
lambda/: README.md
scripts/: README.md  check.sh  clear-latest-directory.js  install.sh  package.json  test-build.sh  upload-to-supabase-api.sh  upload-to-supabase-cli.sh
supabase/: config.toml  env.example  (+1 more)
test-projects/poetry-project/: pyproject.toml
(+516 files in other folders)
