[tool.poetry]
name = "my-poetry-project"
version = "0.1.0"
description = "A sample Poetry project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.0"
redis = "^5.0.0"
psycopg2-binary = "^2.9.0"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 